fixed home, blank state, announcements, profile image, scrollbar

--- a/client/app.less
+++ b/client/app.less
@@ -54,3 +54,32 @@ form {
   //min-height: 80vh;
   // box-shadow: -1px 1px 5px -1px #666;
 }
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  
+}
+::-webkit-scrollbar:hover {
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 5px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  width: 10px;
+  // background: #b8e2ee;
+  background: #808080;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #0782a6cf;
+}
+
