--- a/client/components/EnhancedTable/BlankState/styles.less
+++ b/client/components/EnhancedTable/BlankState/styles.less
@@ -1,15 +1,23 @@
 .main{
   height: 47em;
-  .text{
-    text-align: center;
-    padding: 11em 32.5em;
-    font-size: 11pt;
-    font-family: gotham-black;
+  justify-content: center;
+  .wrap{
     background-image: url(/images/brush.png);
     background-repeat: no-repeat;
     background-position-x: center;
     background-size: contain;
-    height: 58px;
-    margin-top: 3.5em;
+    height: 410px;
+  }
+  .text{
+    text-align: center;
+    padding: 9em;
+    font-size: 11pt;
+    font-family: gotham-black;
+    margin-top: 1.5em;
+  }
+  .texter{
+    width: 10em;
+    margin: auto;
+    margin-top: 10px;
   }
 }
