--- a/client/components/Home/styles.less
+++ b/client/components/Home/styles.less
@@ -1,34 +1,24 @@
 .main {
   display: flex;
   flex-wrap: wrap-reverse;
-  /* justify-content: center; */
-  margin-top: 7em;
-  margin-left: 12em;
+  justify-content: center;
   overflow: hidden;
-  .wrap{
-    padding-top: 27em;
-  }
   .text{
     text-align: center;
     font-size: 14pt;
     font-family: gotham-book;
     font-weight: bold;
-    margin: 13px 0 13px 8em;
 
   }
   .smallText{
     text-align: center;
     font-family: gotham-book;
     font-size: 9pt;
-    margin: 13px 0 13px 12em;
+    margin: 13px 0 13px 1em;
+    width: 39em;
   }
   .image{
-    width: 110vh;
-    height: 78vh;
-    background-image: url(/images/portal_home_image.png);
-    background-repeat: no-repeat;
-    background-size: 68% 66%;
-    background-position-x: right;
-    margin-right: 36em;
+    margin-left: 8em;
+    margin-top: 5em;
   }
 }
